adjusted lodging reservation information to be more specific and helpful

--- a/index.html
+++ b/index.html
@@ -173,15 +173,17 @@
 				<a href="https://www.google.com/maps/place/The+Christie+Lodge/@39.635169,-106.52112,17z/data=!3m1!4b1!4m2!3m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77?hl=en">
 					47 East Beaver Creek Boulevard<br>
 					Avon, Colorado 81620
-				</a>
+				</a></br>
+				<a href="http://www.christielodge.com/">www.christielodge.com</a>
 			</p>
 			
-			<p>
-				<a href="http://www.christielodge.com/">www.christielodge.com</a></br>
-				<a href="tel:1-970-845-4546">1.970.845.4546</a><br>
-				Use Promotional Code: FSWED
+			<p>Contact Nancy Decesare directly to book your reservation!</br>
+				<a href="tel:1-970-845-4546">phone: 1.970.845.4546</a></br>
+				<a href="mailto:ndecesare@christielodge.com">email: NDecesare@ChristieLodge.com</a></br>
+				Nancy's office hours are Monday-Friday, 9am to 5pm (Mountain) but can be reached by email anytime!</br>
+				Don't forget to use our Promotional Code: FSWED
 			</p>
-			<p class="justify"><em>Important note:</em> While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
+			<p class="justify"><em>Important note:</em> While it may seem early, March is high season in Colorado for skiing, and The Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
 			<h6>The Christie Lodge has two options for our guests:</h6>
 			<dl class="option">
 				<dt><a href="http://www.christielodge.com/one-bedroom-suites/"><em>Option 1 - </em>One Bedroom Suites:</a>
@@ -190,7 +192,8 @@
 				<dt><a href="http://www.christielodge.com/three-bedroom-suites/"><em>Option 2 - </em>Three Bedroom Suites:</a></dt>
 				<dd>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, three bathrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</dd>
 			</dl>
-			<p>If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
+			<p>The Christie Lodge offers free parking if you rent a car or decide to drive.</p>
+			<p>If you have any issues making a reservation, please email us at <a href="mailto:reneerussell2015@gmail.com">ReneeRussell2015@gmail.com</a></p>
 		</section>
 
 		<section id="transportation">
@@ -201,7 +204,7 @@
 
 			<p class="justify">If you would like to rent a vehicle, both Denver International and Eagle County offer rental care services. It is about a 2&frac12; hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
 			<h6><a href="https://www.google.com/maps/dir/Denver+International+Airport,+8500+Pe%C3%B1a+Blvd,+Denver,+CO+80249/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.8480298,-105.5971769,8z/am=t/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x876c7f2a98ff44ff:0x49583bb435b59c6a!2m2!1d-104.673737!2d39.856098!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169">Directions from Denver International Airport: </a></h6>
-			<p class="justify">Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and the Christie Lodge is on your left. </p>
+			<p class="justify">Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and The Christie Lodge is on your left. </p>
 			<h6><a href="https://www.google.com/maps/dir/Eagle+County+Regional+Airport,+219+Eldon+Wilson+Rd,+Gypsum,+CO+81637/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.7162315,-106.715416,10z/am=t/data=!3m1!4b1!4m16!4m15!1m5!1m1!1s0x8741c0af58fb5911:0x8954a136d1d1d0db!2m2!1d-106.909712!2d39.640448!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169!2m1!6e4!3e0">Directions from Eagle County Regional Airport:</a></h6>
 			<p class="justify">Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </p>
 
