--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
 			<ul>
 				<li class="registry"><a href="http://www.surlatable.com/registry/giftRegistryList.jsp?id=200843885220">Sur La Table</a></li>
 				<li class="registry"><a href="http://www1.macys.com/registry/wedding/guest/?registryId=6036143">Macy’s</a></li>
+				<li class="registry"><a href="http://www.abottledaffair.com/gifts/index/view/code/559fb821cdf9355a16cd4bcd891ef134/">A Bottled Affair</a></li>
+
+
 				<!-- <li><a href="#registry">Amazon.com</a></li> -->
 			</ul>
 		</section>
