added link to my personal page

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 		<p>Please email us at <a href="mailto:reneerussell2015@gmail.com">ReneeRussell2015@gmail.com</a> if you have any questions, need more information, or just want to send some love!</p>
 
 
-		<span><em><small>Site built and designed by the bride and groom &copy; 2014.</small></em></span>
+		<span><em><small>Site built and designed by the bride and <a href="http://russellschoenbeck.com">groom</a> &copy; 2014.</small></em></span>
 
 	</article>
 	<footer></footer>
