updated vendor list

--- a/index.html
+++ b/index.html
@@ -313,10 +313,11 @@
 				<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx" target="_blank">Katherine Pollock and Kim Selani, Vail Resorts</a></li>
 				<li><a href="http://cargocollective.com/KatherineDrejas" target="_blank">Katie Drejas, Save the Date Design</a></li>
 				<li><a href="http://www.sugarbreck.com/" target="_blank">Katy Pierson, Sugar</a></li>
-				<li><a href="http://www.christielodge.com/" target="_blank">Nancy DeCesare, Jill Russell, and Pamela Wylie, The Christie Lodge</a></li>
 				<li><a href="http://www.nateandjennyweddings.com/" target="_blank">Nate Agnini and Jenny Nelson, Nate and Jenny Weddings</a></li>
+				<li><a href="http://petalsandpours.com/" target="_blank">Signe Jones, Petals and Pours</a></li>
 				<li><a href="http://50eastcalligraphy.com/" target="_blank">Stephanie Sokolowski, 50 East Calligraphy</a></li>
 				<li><a href="https://www.facebook.com/waterlilyevents" target="_blank">Summer Norwell, Water Lily Events</a></li>
+				<li><a href="http://www.christielodge.com/" target="_blank">Tom Butz, Nancy DeCesare, and Jill Russell, The Christie Lodge</a></li>
 				<li><a href="http://turtlebusbar.com/" target="_blank">Tommy Turtle, Turtle Bus Bar</a></li>
 				<li><a href="http://www.ulc.org/" target="_blank">Universal Life Church</a></li>
 			</ul>
