updated honeymoon section and removed a bottled affair from registry

--- a/index.html
+++ b/index.html
@@ -284,9 +284,6 @@
 			<ul>
 				<li class="registry"><a href="http://www.surlatable.com/registry/giftRegistryList.jsp?id=200843885220">Sur La Table</a></li>
 				<li class="registry"><a href="http://www1.macys.com/registry/wedding/guest/?registryId=6036143">Macy’s</a></li>
-				<li class="registry"><a href="http://www.abottledaffair.com/gifts/index/view/code/559fb821cdf9355a16cd4bcd891ef134/">A Bottled Affair</a></li>
-
-
 				<!-- <li><a href="#registry">Amazon.com</a></li> -->
 			</ul>
 		</section>
@@ -296,13 +293,12 @@
 			<h4>Honeymoon</h4>
 			<p class="justify">After taking our first cruise together in 2014, we got hooked! We will be spending our honeymoon aboard the Celebrity Equinox cruising through the Caribbean. We will be exploring:</p>
 			<ul>
-				<li><a href="http://www.visitusvi.com/stthomas/homepage">St. Thomas: Charlotte Amalie</a></li>
-				<li><a href="http://www.stkittstourism.kn/">St. Kitts: Basseterre</a></li>
-				<li><a href="http://www.barbados.org/btown.htm#.U1qEqK1dVVs">Barbados: Bridgetown</a></li>
-				<li><a href="http://www.dominica.dm/index.php/day-trips?sobi2Task=sobi2Details&catid=14&sobi2Id=120">Dominca: Roseau</a></li>
-				<li><a href="http://www.st-maarten.com/">St. Maarten: Philipsburg</a></li>
+				<li><a href="http://www.cozumel.travel/">Cozumel: Mexico</a></li>
+				<li><a href="http://www.caymanislands.ky/aboutcayman/grandcayman.aspx">George Town: Grand Cayman</a></li>
+				<li><a href="http://portoffalmouth.com/">Falmouth: Jamaica</a></li>
+				<li><a href="http://www.hispaniola.com/">Labadee: Hispaniola</a></li>
 			</ul>	
-			<p>We will leave for our honeymoon on March 27 from <a href="http://www.visitflorida.com/en-us/cities/fort-lauderdale.html">Fort Lauderdale, Florida</a> just a few weeks after the wedding!</p>
+			<p>We will leave for our honeymoon on March 22 from <a href="http://www.visitflorida.com/en-us/cities/fort-lauderdale.html">Fort Lauderdale, Florida</a> just a few weeks after the wedding!</p>
 		</section>
 
 
