rehashed the Transportation section to be more legible - added discount code information for shuttle

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				<a href="tel:1-970-845-4546">phone: 1.970.845.4546</a></br>
 				<a href="mailto:ndecesare@christielodge.com">email: NDecesare@ChristieLodge.com</a></br>
 				Nancy's office hours are Monday-Friday, 9am to 5pm (Mountain) but can be reached by email anytime!</br>
-				Don't forget to use our Promotional Code: FSWED
+				Don't forget to mention our Promotional Code: FSWED
 			</p>
 			<p class="justify"><em>Important note:</em> While it may seem early, March is high season in Colorado for skiing, and The Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
 			<h6>The Christie Lodge has two options for our guests:</h6>
@@ -199,16 +199,26 @@
 		<section id="transportation">
 			<h4>Transportation</h4>
 			<p class="justify">Guests from out of town should plan to fly in to either Denver International Airport <em>(Airport Code: DEN)</em> or Eagle County Regional Airport <em>(Airport Code: EGE)</em>.</p>
+			<dl class="option">
+				<dt><a href="."><em><a href="http://coloradomountainexpress.hudsonltd.net/res?USERIDENTRY=FLSC15&LOGON=GO">Shuttle</a>:</em></a>
+				<dt>
+				<dd>We <em>highly</em> recommend this option! You can get roundtrip door-to-door service through <a href="http://coloradomountainexpress.hudsonltd.net/res?USERIDENTRY=FLSC15&LOGON=GO">Colorado Mountain Express</a> to and from either of the two airports mentioned directly to The Christie Lodge.</dd>
+				<dd class="text-center">
+					<a href="http://coloradomountainexpress.hudsonltd.net/res?USERIDENTRY=FLSC15&LOGON=GO">You can book online with our discount using <em>this link</em></a></br>
+					or call to book over the phone: <a href="tel:1-800-525-6363">1.800.525.6363</a></br>
+					If you call, don't forget to use our Promotional Code: FLSC15
+				</dd>
+				<dd>Again, we recommend this option as this company is trained to drive in the extreme winter conditions in the mountains. It will save you the headache of having to drive and will get you to our wedding reliably. Once you arrive at The Christie Lodge, you really don't need private transportation to get around Avon, Beaver Creek, or Vail.</dd>
 
-			<p class="justify">If you would like to take a shuttle, we recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare!</p>
+				<dt><em>Car Rental:</em></dt>
+				<dd>If you would like to rent a vehicle, both Denver International and Eagle County offer vehicle rental services. It is about a 2&frac12; hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport (depending on the weather).</dd>
+				<dd><a href="https://www.google.com/maps/dir/Denver+International+Airport,+8500+Pe%C3%B1a+Blvd,+Denver,+CO+80249/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.8480298,-105.5971769,8z/am=t/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x876c7f2a98ff44ff:0x49583bb435b59c6a!2m2!1d-104.673737!2d39.856098!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169">Directions from Denver International Airport: </a></dd>
+				<dd class="justify">Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and The Christie Lodge is on your left. </dd>
+				<dd><a href="https://www.google.com/maps/dir/Eagle+County+Regional+Airport,+219+Eldon+Wilson+Rd,+Gypsum,+CO+81637/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.7162315,-106.715416,10z/am=t/data=!3m1!4b1!4m16!4m15!1m5!1m1!1s0x8741c0af58fb5911:0x8954a136d1d1d0db!2m2!1d-106.909712!2d39.640448!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169!2m1!6e4!3e0">Directions from Eagle County Regional Airport:</a></dd>
+				<dd class="justify">Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance.</dd>
+			</dl>
 
-			<p class="justify">If you would like to rent a vehicle, both Denver International and Eagle County offer rental care services. It is about a 2&frac12; hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
-			<h6><a href="https://www.google.com/maps/dir/Denver+International+Airport,+8500+Pe%C3%B1a+Blvd,+Denver,+CO+80249/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.8480298,-105.5971769,8z/am=t/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x876c7f2a98ff44ff:0x49583bb435b59c6a!2m2!1d-104.673737!2d39.856098!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169">Directions from Denver International Airport: </a></h6>
-			<p class="justify">Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and The Christie Lodge is on your left. </p>
-			<h6><a href="https://www.google.com/maps/dir/Eagle+County+Regional+Airport,+219+Eldon+Wilson+Rd,+Gypsum,+CO+81637/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.7162315,-106.715416,10z/am=t/data=!3m1!4b1!4m16!4m15!1m5!1m1!1s0x8741c0af58fb5911:0x8954a136d1d1d0db!2m2!1d-106.909712!2d39.640448!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169!2m1!6e4!3e0">Directions from Eagle County Regional Airport:</a></h6>
-			<p class="justify">Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </p>
-
-			<p class="justify">Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events.</p>
+			<p class="justify">Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain, and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for the wedding events! If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
 		</section>
 
 		<section id="activities" class="group">
