added help email link to bottom of transporation section

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 				<dd><a href="https://www.google.com/maps/dir/Eagle+County+Regional+Airport,+219+Eldon+Wilson+Rd,+Gypsum,+CO+81637/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.7162315,-106.715416,10z/am=t/data=!3m1!4b1!4m16!4m15!1m5!1m1!1s0x8741c0af58fb5911:0x8954a136d1d1d0db!2m2!1d-106.909712!2d39.640448!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169!2m1!6e4!3e0">Directions from Eagle County Regional Airport:</a></dd>
 				<dd class="justify">Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance.</dd>
 			</dl>
-
 			<p class="justify">Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain, and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for the wedding events! If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
+			<p>If you have any questions or issues making a shuttle reservation, please email us at <a href="mailto:reneerussell2015@gmail.com">ReneeRussell2015@gmail.com</a></p>
 		</section>
 
 		<section id="activities" class="group">
