added brilliant earth name and times for events

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<ol>
 							<li>Thursday, March 5, 2015</li>
 							<li>The Christie Lodge</li>
-							<li>Time TBD</li>
+							<li>7:00pm (Mountain)</li>
 						</ol>
 					</div>
 				</a>
@@ -88,7 +88,7 @@
 						<ol>
 							<li>Friday, March 6, 2015</li>
 							<li>Allie's Cabin</li>
-							<li>Sleigh departs at 5:30pm</li>
+							<li>First Sleigh departs 5:30pm</li>
 						</ol>
 					</div>
 				</a>
@@ -112,7 +112,7 @@
 					<ol>
 						<li>Thursday, March 5, 2015</li>
 						<li><a href="#christielodge" data-scroll>The Christie Lodge</a></li>
-						<li>Time TBD</li>
+						<li>7:00pm (Mountain)</li>
 						<li><a href="#attire">Casual Attire</a></li>
 					</ol>
 				</div>
@@ -127,7 +127,7 @@
 					<ol>
 						<li>Friday, March 6, 2015</li>
 						<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx">Allie's Cabin</a></li>
-						<li>Sleigh departs at 5:30pm</li>
+						<li>First Sleigh departs 5:30pm</li>
 						<li><a href="#attire" data-scroll>Creative Black Tie Optional</a></li>
 					</ol>
 				</div>
@@ -200,8 +200,7 @@
 			<h4>Transportation</h4>
 			<p class="justify">Guests from out of town should plan to fly in to either Denver International Airport <em>(Airport Code: DEN)</em> or Eagle County Regional Airport <em>(Airport Code: EGE)</em>.</p>
 			<dl class="option">
-				<dt><a href="."><em><a href="http://coloradomountainexpress.hudsonltd.net/res?USERIDENTRY=FLSC15&LOGON=GO">Shuttle</a>:</em></a>
-				<dt>
+				<dt><a href="."><em><a href="http://coloradomountainexpress.hudsonltd.net/res?USERIDENTRY=FLSC15&LOGON=GO">Shuttle</a>:</em></a><dt>
 				<dd>We <em>highly</em> recommend this option! You can get roundtrip door-to-door service through <a href="http://coloradomountainexpress.hudsonltd.net/res?USERIDENTRY=FLSC15&LOGON=GO">Colorado Mountain Express</a> to and from either of the two airports mentioned directly to The Christie Lodge.</dd>
 				<dd class="text-center">
 					<a href="http://coloradomountainexpress.hudsonltd.net/res?USERIDENTRY=FLSC15&LOGON=GO">You can book online with our discount using <em>this link</em></a></br>
@@ -317,7 +316,7 @@
 			
 			<p class="justify">We are so grateful for all of the love and support we have received from our parents, <a href="#party" data-scroll>wedding party</a>, relatives, and friends. You are all seriously incredible people and we look forward to spending our special day with you! A very special thanks to the following people for all of the “behind the scenes” work they do to make this the best day ever!</p>
 			<ul>
-				<li><a href="http://www.brilliantearth.com/" target="_blank">Beth Moore, Brilliant Earth</a></li>
+				<li><a href="http://www.brilliantearth.com/" target="_blank">Jaclyn Dziesietnik and Beth Moore, Brilliant Earth</a></li>
 				<li><a href="http://www.paper-source.com/cgi-bin/paper/about/index.html" target="_blank">Brittany Walker, Paper Source</a></li>
 				<li><a href="http://colormedee.com/" target="_blank">Dimitra Nardi, ColormeDee</a></li>
 				<li><a href="http://www.greatimedj.com/" target="_blank">Fred Hammond, Greatime DJs</a></li>
