added data scroll to attire

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<li>Thursday, March 5, 2015</li>
 						<li><a href="#christielodge" data-scroll>The Christie Lodge</a></li>
 						<li>7:00pm (Mountain)</li>
-						<li><a href="#attire">Casual Attire</a></li>
+						<li><a href="#attire" data-scroll>Casual Attire</a></li>
 					</ol>
 				</div>
 				<a href="#christielodge" data-scroll><img src="img/christielodgeinside.jpg" class="venue"></a>
