added Heidi as officiant

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			
 		<section id="party">
 			<h4>Wedding Party</h4>
-			<!-- <h6>Lori Sassali, <em>Officiant</em></h6> -->
+			<h6>Heidi Emanuel, <em>Officiant</em></h6>
 			<div class="group trial">
 				<div class="party-male">
 					<h3>The Men</h3>
