updated lodging information and adjusted welcome evening language

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					</ol>
 				</div>
 				<a href="#christielodge" data-scroll><img src="img/christielodgeinside.jpg" class="venue"></a>
-				<p class="justify">If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. We are still working on the details, but we will definitely have catering from a local restaurant, board games, and of course, some libations. We hope you will swing by, relax with us, and meet some of the other important people in our lives. This will likely start around 7:00, please check back for more details.</p>
+				<p class="justify">If you plan to arrive on or before Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. We are still working on the details, but we will definitely have catering from a local restaurant, board games, and of course, some libations. We hope you will swing by, relax with us, and meet some of the other important people in our lives. This will likely start around 7:00pm (Mountain), please check back for more details.</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 
@@ -183,7 +183,7 @@
 				Nancy's office hours are Monday-Friday, 9am to 5pm (Mountain) but can be reached by email anytime!</br>
 				Don't forget to mention our Promotional Code: FSWED
 			</p>
-			<p class="justify"><em>Important note:</em> While it may seem early, March is high season in Colorado for skiing, and The Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
+			<p class="justify"><em>Important note:</em> While it may seem early, March is high season in Colorado for skiing, and The Christie Lodge books up early! We recommend you book your room for our wedding no later than <em>December 31, 2014</em>. We strongly recommend arriving on or before Thursday and join us for the <a href="#welcomeevening" data-scroll>Welcome Evening</a>.</p>
 			<h6>The Christie Lodge has two options for our guests:</h6>
 			<dl class="option">
 				<dt><a href="http://www.christielodge.com/one-bedroom-suites/"><em>Option 1 - </em>One Bedroom Suites:</a>
