updated a bunch of random stuff including area activities and added equipment rentals

--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@
 				Nancy's office hours are Monday-Friday, 9am to 5pm (Mountain) but can be reached by email anytime!</br>
 				Don't forget to mention our Promotional Code: FSWED
 			</p>
-			<p class="justify"><em>Important note:</em> While it may seem early, March is high season in Colorado for skiing, and The Christie Lodge books up early! We recommend you book your room for our wedding no later than <em>December 31, 2014</em>. We strongly recommend arriving on or before Thursday and join us for the <a href="#welcomeevening" data-scroll>Welcome Evening</a>.</p>
+			<p class="justify"><em>Important note:</em> We highly recommend you book your room no later than <em>January 28, 2015</em> as the room block and discount expires. We strongly recommend arriving on or before Thursday and join us for the <a href="#welcomeevening" data-scroll>Welcome Evening</a>.</p>
 			<h6>The Christie Lodge has two options for our guests:</h6>
 			<dl class="option">
 				<dt><a href="http://www.christielodge.com/one-bedroom-suites/"><em>Option 1 - </em>One Bedroom Suites:</a>
 				<dt>
-				<dd>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</dd>
+				<dd>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.</dd>
 				<dt><a href="http://www.christielodge.com/three-bedroom-suites/"><em>Option 2 - </em>Three Bedroom Suites:</a></dt>
-				<dd>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, three bathrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</dd>
+				<dd>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, three bathrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12.</dd>
 			</dl>
-			<p>The Christie Lodge offers free parking if you rent a car or decide to drive.</p>
+			<p>The Christie Lodge offers free parking if you rent a car or decide to drive; just remember to register it with front desk. Also, The Christie Lodge will place the charge for your room fourteen days before your arrival date.</p>
 			<p>If you have any issues making a reservation, please email us at <a href="mailto:reneerussell2015@gmail.com">ReneeRussell2015@gmail.com</a></p>
 		</section>
 
@@ -222,6 +222,7 @@
 
 		<section id="activities" class="group">
 			<h4>Area Activities</h4>
+			<p class="justify">If you plan on skiing or boarding, we have a group discount set up through <a href="https://www.rentskis.com/#/groups/fswedding" target="_blank">Beaver Creek Sports</a> for equipment but only if you book online in advance. It's also cost beneficial to <a href="http://www.beavercreek.com/plan-your-trip/lift-tickets/lift-tickets-search.aspx" target="_blank">purchase lift tickets</a> online in advance.</p>
 			<div class="activity">
 				<h5>Relax &#38; Explore</h5>
 				<ul>
@@ -244,16 +245,20 @@
 
 
 
+
 			<div class="activity">
 				<h5>Eat &#38; Drink</h5>
 				<h3><a href="http://www.visitavoncolorado.com/" class="underline">Avon, CO</a></h3>
 				<ul>
-					<li><a href="http://www.agaveavon.com/">Agave</a></li>
-					<li><a href="http://beaverliquors.com/">Beaver Liquors</a></li>
-					<li><a href="http://http://blueplateavon.com/">The Blue Plate</a></li>
+					<li><a href="http://www.agaveavon.com/restaurant">Agave</a></li>
+					<li><a href="http://www.avonbakeryanddeli.com/">Avon Bakery &amp; Deli</a></li>
+					<li><a href="http://www.beaverliquors.com/">Beaver Liquors</a></li>
+					<li><a href="http://www.blueplateavon.com/">Blue Plate</a></li>
 					<li><a href="http://loadedjoes.com/">Loaded Joe’s</a></li>
 					<li><a href="http://www.localjoespizza.com/">Local Joe’s</a></li>
+					<li><a href="http://www.montanasbbqavon.com/">Montana's Smokehouse</a></li>
 					<li><a href="http://www.pazzospizza.com/">Pazzo’s Pizzeria</a></li>
+					<li><a href="https://www.facebook.com/Pho20avon?ref=stream">Pho 20</a></li>
 					<li><a href="http://vin48.com/">Vin48</a></li>
 				</ul>
 				
@@ -264,6 +269,7 @@
 					<li><a href="http://dustybootbeavercreek.com/">Dusty Boot Saloon</a></li>
 					<li><a href="http://www.themetbc.com/">Metropolitan</a></li>
 					<li><a href="http://www.mirabelle1.com/">Mirabelle Restaurant</a></li>
+					<li><a href="http://www.riminigelato.com/">Rimini</a></li>
 					<li><a href="http://www.toscaninibeavercreek.com/toscanini/">Toscanini</a></li>
 				</ul>			
 
@@ -293,7 +299,6 @@
 			<ul>
 				<li class="registry"><a href="http://www.surlatable.com/registry/giftRegistryList.jsp?id=200843885220">Sur La Table</a></li>
 				<li class="registry"><a href="http://www1.macys.com/registry/wedding/guest/?registryId=6036143">Macy’s</a></li>
-				<!-- <li><a href="#registry">Amazon.com</a></li> -->
 			</ul>
 		</section>
 
@@ -318,7 +323,6 @@
 			<ul>
 				<li><a href="http://www.brilliantearth.com/" target="_blank">Jaclyn Dziesietnik and Beth Moore, Brilliant Earth</a></li>
 				<li><a href="http://www.paper-source.com/cgi-bin/paper/about/index.html" target="_blank">Brittany Walker, Paper Source</a></li>
-				<li><a href="http://colormedee.com/" target="_blank">Dimitra Nardi, ColormeDee</a></li>
 				<li><a href="http://www.greatimedj.com/" target="_blank">Fred Hammond, Greatime DJs</a></li>
 				<li><a href="http://www.allegriaspa.com/" target="_blank">Gina Triglia, Allegria Spa at the Park Hyatt</a></li>
 				<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx" target="_blank">Katherine Pollock and Kim Selani, Vail Resorts</a></li>
