fixed cruise information and added a link

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
 		<section id="honeymoon">
 			<h4>Honeymoon</h4>
-			<p class="justify">We will start our honeymoon in <a href="http://www.visitflorida.com/en-us/cities/fort-lauderdale.html">Fort Lauderdale, Florida</a> at a boutique hotel called <a href="http://www.pillarshotel.com/">The Pillars</a>. After taking our first cruise together in 2014, we got hooked! We will be spending the rest of our honeymoon aboard the <a href="http://www.celebritycruises.com/ships/celebrity-equinox">Celebrity Equinox</a> cruising through the Caribbean. Our cruise departs on March 22, 2015 and will then be exploring:</p>
+			<p class="justify">We will start our honeymoon in <a href="http://www.visitflorida.com/en-us/cities/fort-lauderdale.html">Fort Lauderdale, Florida</a> at a boutique hotel called <a href="http://www.pillarshotel.com/">The Pillars</a>. After taking our first cruise together in 2014, we got hooked! We will be spending the rest of our honeymoon aboard the <a href="http://www.celebritycruises.com/ships/celebrity-silhouette">Celebrity Silhouette</a> cruising through the Caribbean. <a href="http://www.celebritycruises.com/cruises/cruise-package-SI07W131?packageid=SI07W131&dest=CARIB&shipCode=SI&shipName=Celebrity-Silhouette">Our cruise</a> departs on March 22, 2015 and will then be exploring:</p>
 			<ul>
 				<li><a href="http://www.cozumel.travel/">Cozumel: Mexico</a></li>
 				<li><a href="http://www.caymanislands.ky/aboutcayman/grandcayman.aspx">George Town: Grand Cayman</a></li>
